tests/errors/arrays/empty-no-context.fn
---
Description: Empty array literal without type context
Expected: FN3709
---

type Program
{
    fn Main -> i32
    {
        var noType = []
        return 0
    }
}
